# fuck1a2bbot

./: .gitignore  Cargo.toml  pyproject.toml
fuck1a2bbot/: __init__.py  __main__.py
src/: main.rs
telegram1a2b/: __init__.py  __main__.py
